--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>hello</title>
+        
     </head>
     <body>
+        <li><a href="about.html">about</a></li>
         <div>
             <p>hello world</p>
             <h1>have a nice day</h1>
