added about in pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         
     </head>
     <body>
-        <li><a href="about.html">about</a></li>
+        <li><a href="pages/about.html">about</a></li>
         <div>
             <p>hello world</p>
             <h1>have a nice day</h1>
